--- a/docker/redis/docker-compose.yml
+++ b/docker/redis/docker-compose.yml
@@ -1,3 +1,24 @@
+version: '3'
+
+services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+
+  redisCommander:
+    image: tenstartups/redis-commander
+    command: --redis-host redis
+    links:
+      - redis:redis
+    ports:
+      - '8081:8081'
+
+volumes:
+  redis-data:
+    driver: local
+
+
 # web:
 #   # build: .
 #   ports:
@@ -6,5 +27,5 @@
 #    - .:/code
 #   links:
 #    - redis
-redis:
-  image: redis
+# redis:
+#   image: redis
