--- a/GCP/ansible/hosts.yml
+++ b/GCP/ansible/hosts.yml
@@ -1,7 +1,16 @@
+# prepare: ssh [srvName]  <- ssh config  <- vim /etc/hosts
+#
+# ansible-paybook -i hosts.yml site.yml 
+#
 
 all:
   vars:
-    ansible_python_interpreter: /usr/bin/python3
+    #ansible_python_interpreter: /usr/bin/python3
 
 # NTPサーバアドレス
     ntp_address: "ntp.jst.mfeed.ad.jp ntp.nict.jp"
+
+
+samplenodes:
+  hosts:
+    targetSrv:
