--- a/GCP/ansible/site.yml
+++ b/GCP/ansible/site.yml
@@ -1,6 +1,5 @@
 # 個別ノード構築
-# - hosts: 
-#   become: yes
-#   roles:
-#
-- { name: common/roles/init, tags: init }
+- hosts: targetSrv 
+  become: yes
+  roles:
+  - { name: common/roles/init, tags: init }
